------------------------------------------------------------------------
r1579 | gaser | 2020-03-10 14:51:09

Changed paths:
M       CHANGES.txt
M       Contents.m
M       Makefile
M       cat12.m
MM      cat_io_lazy.m
M       cat_surf_results.m
M       html/cat.html

(1) Fixed: Removed inconsistencies in cat_surf_results.
(2) Fixed: Variable cat_version was not set in cat12.m
(3) Changed: Added checklist to Makefile

------------------------------------------------------------------------
r1578 | gaser | 2020-03-10 10:19:19 +0100 (Di, 10 Mär 2020) | 22 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat12.m
MM      cat_io_rerun.m
M       cat_surf_results.m
 M      cat_surf_scaling.m
M       cat_version.m
M       cat_vol_slice_overlay.m
M       html/cat.html
MM      spm_diffeo_old.c
 M      spm_diffeo_old.mexa64
 M      spm_diffeo_old.mexmaci64
 M      spm_diffeo_old.mexw64

(1) Changed: Lots of changes in cat_surf_results.
(2) Changed: Made changes back in cat_version.m because Contents.txt should be
    found first for deployed versions.
(3) Changed: Timer call of update-check and server request in cat12.m to 
    prevent delayed GUI responses.


------------------------------------------------------------------------
r1577 | dahnke | 2020-03-09 18:36:03 +0100 (Mo, 09 Mär 2020) | 51 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_catsimple.m
M       cat_conf_output.m
M       cat_conf_stools.m
M       cat_conf_tools.m
A       cat_io_lazy.m
M       cat_io_report.m
M       cat_main.m
M       cat_main_reportfig.m
M       cat_main_reportstr.m
M       cat_main_roi.m
M       cat_main_write.m
M       cat_run1173/cat_main1173.m
M       cat_run1173/cat_tst_qa1173.m
M       cat_run1173plus/cat_main1173plus.m
M       cat_run1445/cat_conf_ROI1445.m
M       cat_run1445/cat_main1445.m
M       cat_run1445/cat_main_LAS1445.m
M       cat_run1445/cat_main_gcut1445.m
M       cat_run1445/cat_main_registration1445.m
M       cat_run1445/cat_run1445.m